Fix cut off status text in mobile view

--- a/app/styles/roadmap.css
+++ b/app/styles/roadmap.css
@@ -362,7 +362,7 @@
     .feature_name,
     .feature-info {
         float: none;
-        padding: 5px 0 0 10px;
+        padding: 2px 0 2px 10px;
         height: auto;
     }
 
